Import theme css

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
  */
 @tailwind preflight;
 
+@import 'themes/light';
+@import 'themes/dark';
 /**
  * This injects any component classes registered by plugins.
  *
@@ -88,20 +90,4 @@
     --button-background-color: #47cdff;
     --header-background-color: white;
     --text-default-color: #8795a1;
-}
-
-.theme-light {
-    --page-background-color: #f5f6f9;
-    --card-background-color: white;
-    --button-background-color: #47cdff;
-    --header-background-color: white;
-    --text-default-color: #8795a1;
-}
-
-.theme-dark {
-    --page-background-color: #17181e;
-    --card-background-color: #1f2027;
-    --button-background-color: #59b6f9;
-    --header-background-color: #1f2027;
-    --text-default-color: #fff;
 }
