--- a/public/css/app.css
+++ b/public/css/app.css
@@ -653,6 +653,36 @@ table {
   box-shadow: 0 2px 7px 0 #00658b;
 }
 
+.dropdown-toggle > button {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: .5rem;
+}
+
+.dropdown-toggle > button:focus,
+.dropdown-toggle button:hover {
+  outline: 0;
+  background: rgba(0, 0, 0, .1);
+}
+
+.dropdown-menu-link {
+  display: block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: var(--text-default-color);
+  text-decoration: none;
+  font-size: .875rem;
+  line-height: 2;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.dropdown-menu-link:hover {
+  background: rgba(0, 0, 0, .1);
+}
+
 /**
  * This injects all of Tailwind's utility classes, generated based on your
  * config file.
